[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/menu/menu_entrar.gd" type="Script" id=1]
[ext_resource path="res://Player/hud/servidor64x64.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="Theme" id=1]

[node name="Menu_entrar" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 377.55
margin_top = 368.111
margin_right = 486.55
margin_bottom = 387.111
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="servidor" type="Sprite" parent="."]
visible = false
position = Vector2( 490.815, 354.897 )
scale = Vector2( 1.5, 2 )
texture = ExtResource( 2 )

[node name="cliente" type="Sprite" parent="."]
position = Vector2( 375.662, 369.999 )
scale = Vector2( 1.5, 2 )
texture = ExtResource( 3 )

[node name="Escala_label" type="Node2D" parent="."]
scale = Vector2( 1.5, 2 )

[node name="TextEdit-puerto" type="TextEdit" parent="Escala_label"]
margin_left = 56.7643
margin_top = 79.1869
margin_right = 364.764
margin_bottom = 127.187
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit-ip" type="TextEdit" parent="Escala_label"]
margin_left = 61.2474
margin_top = 12.4054
margin_right = 368.247
margin_bottom = 71.4054
__meta__ = {
"_edit_use_anchors_": false
}

[node name="carga" type="Label" parent="Escala_label"]
visible = false
margin_left = 77.3882
margin_top = 139.869
margin_right = 306.388
margin_bottom = 188.869
text = "Cargando escenas 3D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2-ip" type="Label" parent="Escala_label"]
margin_left = 11.6724
margin_top = 29.1621
margin_right = 240.672
margin_bottom = 78.1621
text = "IP
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2-ip2" type="Label" parent="Escala_label"]
margin_left = 5.44435
margin_top = 89.7067
margin_right = 234.444
margin_bottom = 138.707
text = "Puerto
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Escala_label"]
margin_left = 72.7927
margin_top = 162.92
margin_right = 208.793
margin_bottom = 235.92
text = "Entra"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="Escala_label/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
